--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://hamdifrik01:Hamdi123@cluster0.dv1aqx0.mongodb.net/?retryWrites=true&w=majority&tlsAllowInvalidCertificates=true
+MONGO_URI=mongodb+srv://hamdifrik01:Hamdi123@cluster0.dv1aqx0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 BASE_URL=http://localhost:5000
 PORT=5000
